structmeta-tests/tests/compile_fail/struct_meta/missing_named_argument.rs
#[structmeta_tests::attr_required_name_value()]
fn my_func() {}

fn main() {}
