structmeta-tests/tests/compile_fail/struct_meta/missing_named_argument.stderr
error: missing argument `value = ...`
 --> $DIR/missing_named_argument.rs:1:1
  |
1 | #[structmeta_tests::attr_required_name_value()]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `structmeta_tests::attr_required_name_value` (in Nightly builds, run with -Z macro-backtrace for more info)
